# dandelion

./: .gitignore  bun.lockb  clear.sh  package.json  track.md
src-fe/: playwright.config.ts  vite.config.ts
src-fe/src/: App.vue  app.vue  main.ts  utilities.ts
src-fe/src/assets/: main.css
src-fe/src/interface/: ast.ts  basic.ts
src-fe/src/router/: index.ts
src-fe/src/temporary/: write-message.vue
src-fe/src/views/: Conf.vue  Find.vue  Home.vue  Table.vue  find.vue
src-tauri/: Cargo.toml  a.md  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/ddl/: conf.rs  markdown.rs  mod.rs  notify.rs  run.rs
src-tauri/src/process/: ddl_conf.rs  ddl_try.rs  mod.rs
