[package]
name = "dandelion"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = "MIT"
repository = ""
default-run = "dandelion"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.15", features = [] }
tauri-plugin-dialog = "2.0.0-rc"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
markdown = { version = "1.0.0-alpha.20", features = ["serde"] }
log = "0.4.22"
